--- a/SASS/components/_header.scss
+++ b/SASS/components/_header.scss
@@ -32,6 +32,10 @@
     align-items: center;
 }
 
+.header{
+    border-bottom: 1px solid #bbbbbb;
+}
+
 .logo-link {
     width: 145px;
     height: 31px;
