--- a/SASS/components/_portfolio-main.scss
+++ b/SASS/components/_portfolio-main.scss
@@ -63,8 +63,8 @@
 .main-section-cards {
     width: 1170px;
     height: 1290px;
-    margin: 0 auto;
-    padding: 0px 170px;
+    margin: 0 auto 94px;
+    padding: 0;
 }
 
 .list-cards {
@@ -103,8 +103,7 @@
     position: absolute;
     top: 0;
     transition: transform 1s ease;
-    width: 322px;
-
+    width: 100%;
 }
 
 .main-list-item:hover .overlay {
