--- a/SASS/components/_hero.scss
+++ b/SASS/components/_hero.scss
@@ -54,7 +54,17 @@
     }
 }
 
-.modal {
+.backdrop{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.3);
+    z-index: 99;
+}
+
+.modal{
     padding: 40px;
     width: 528px;
     height: 623px;
@@ -101,17 +111,21 @@
     cursor: pointer;
 }
 
+
 .modal-input:focus+.modal-svg {
     fill: #2196F3;
+    transition: 0.3s ease;
 }
 
 .modal-input:hover+.modal-svg {
     fill: #2196F3;
+    transition: 0.3s ease;
 }
 
 .modal-input:focus,
 .modal-input:hover {
     border-color: #2196F3;
+    transition: 0.3s ease;
 }
 
 .modal-bth-close {
@@ -119,7 +133,6 @@
     height: 30px;
     border-radius: 50%;
     border: 1px solid rgba(0, 0, 0, 0.10);
-    ;
     cursor: pointer;
     background-color: #fff;
     position: absolute;
@@ -137,6 +150,7 @@
 .close-svg:hover,
 .close-svg:focus {
     fill: #2196F3;
+    transition: 0.3s ease;
 }
 
 .is-visible {
