--- a/SASS/portfolio.scss
+++ b/SASS/portfolio.scss
@@ -1,4 +1,5 @@
 @import "./base/common";
 @import "./components/header";
+@import "./components/portfolio-bth";
 @import "./components/portfolio-main";
 @import "./components/footer";
