--- a/CSS/portfolio.css
+++ b/CSS/portfolio.css
@@ -28,7 +28,7 @@ body {
   margin: 0 auto;
 }
 
-.nav-menu-left {
+.header__menuleft {
   display: flex;
   width: 520px;
   justify-content: space-between;
@@ -36,7 +36,7 @@ body {
   padding: 24px 0px;
 }
 
-.nav-menu-right {
+.header__menuright {
   align-items: center;
   width: 333px;
   display: flex;
@@ -44,17 +44,17 @@ body {
   padding: 0;
 }
 
-.icon-contact {
+.header-icon {
   fill: #757575;
   margin-right: 10px;
 }
 
-.contact-link:hover .icon-contact,
-.contact-link:focus .icon-contact {
+.header__contacts__link:hover .header-icon,
+.header__contacts__link:focus .header-icon {
   fill: #2196F3;
 }
 
-.header-contanier {
+.header__contanier {
   width: 1200px;
   margin: 0 auto;
   display: flex;
@@ -62,11 +62,11 @@ body {
   align-items: center;
 }
 
-.header {
+.header__page {
   border-bottom: 1px solid #bbbbbb;
 }
 
-.logo-link {
+.logo {
   width: 145px;
   height: 31px;
   font-family: "Raleway", sans-serif;
@@ -78,11 +78,11 @@ body {
   text-decoration: none;
 }
 
-.web {
+.logo__web {
   color: #2196F3;
 }
 
-.nav-list-item {
+.header__item {
   font-weight: 500;
   font-size: 14px;
   line-height: 1, 14;
@@ -90,7 +90,7 @@ body {
   position: relative;
 }
 
-.nav-list {
+.header__list {
   display: flex;
   justify-content: space-between;
   list-style: none;
@@ -102,17 +102,17 @@ body {
   width: 281px;
 }
 
-.nav-list-link {
+.header__link {
   position: relative;
   color: #212121;
 }
 
-.nav-list-link:hover::after {
+.header__link:hover::after {
   width: 100%;
   transition: 0.2s ease;
 }
 
-.nav-list-link:after {
+.header__link:after {
   content: "";
   display: block;
   background-color: #2196F3;
@@ -123,12 +123,12 @@ body {
   top: 45px;
 }
 
-.nav-list-link:hover {
+.header__link:hover {
   color: #2196F3;
   transition: 0.2s ease;
 }
 
-.contact-link {
+.header__contacts__link {
   text-decoration: none;
   color: #757575;
   font-weight: 500;
@@ -138,23 +138,23 @@ body {
   list-style: none;
 }
 
-.contact-link:hover,
-.contact-link:focus {
+.header__contacts__link:hover,
+.header__contacts__link:focus {
   color: #2196F3;
   transition: 0.2s ease;
 }
 
-.main-section-bth {
+.main__section__bth {
   margin: 94px 0px 50px;
 }
 
-.main-list-bth {
+.main__list__bth {
   list-style: none;
   display: flex;
   justify-content: center;
 }
 
-.main-button-item {
+.main__button__item {
   padding: 0 25px;
   height: 38px;
   border-radius: 4px;
@@ -169,10 +169,11 @@ body {
   line-height: 26px;
   letter-spacing: 0.48px;
   margin: 0px 8px 0px 0px;
+  cursor: pointer;
 }
 
-.main-button-item:hover,
-.main-button-item:focus {
+.main__button__item:hover,
+.main__button__item:focus {
   background-color: #2196F3;
   color: #FFFFFF;
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
@@ -184,7 +185,7 @@ body {
   height: 294px;
 }
 
-.main-title {
+.main__title {
   font-weight: 700;
   font-size: 18px;
   line-height: 2;
@@ -193,7 +194,7 @@ body {
   margin: 20px 24px 0;
 }
 
-.main-parag {
+.main__parag {
   font-weight: 400;
   font-size: 16px;
   line-height: 1.87;
@@ -204,14 +205,14 @@ body {
   margin: 0px 24px 20px;
 }
 
-.main-section-cards {
+.section__cards {
   width: 1170px;
   height: 1290px;
   margin: 0 auto 94px;
   padding: 0;
 }
 
-.list-cards {
+.cards__list {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
@@ -219,17 +220,17 @@ body {
   list-style: none;
 }
 
-.main-list-item {
+.cards__item {
   border: 1px solid #EEEEEE;
   position: relative;
   overflow: hidden;
 }
 
-.main-list-item:nth-child(-n+6) {
+.cards__item:nth-child(-n+6) {
   margin-bottom: 30px;
 }
 
-.box-text {
+.box__text {
   color: #FFF;
   font-family: "Roboto";
   font-size: 18px;
@@ -250,7 +251,7 @@ body {
   width: 100%;
 }
 
-.main-list-item:hover .overlay {
+.cards__item:hover .overlay {
   transform: translatey(0);
 }
 
@@ -260,21 +261,21 @@ body {
   height: 252px;
 }
 
-.footer-content {
+.footer__content {
   display: flex;
 }
 
-.footer-contact {
+.footer__contact {
   padding-bottom: 60px;
   margin-right: 70px;
 }
 
-.footer-contact-list {
+.footer__contact__list {
   list-style: none;
   padding: 0;
 }
 
-.footer-contact-list a {
+.footer__contact__list a {
   text-decoration: none;
   font-weight: 400;
   font-size: 14px;
@@ -283,7 +284,7 @@ body {
   color: rgba(255, 255, 255, 0.6);
 }
 
-.footer-parag {
+.footer__parag {
   width: 231px;
   height: 21px;
   margin-top: 20px;
@@ -294,16 +295,16 @@ body {
   color: #FFFFFF;
 }
 
-.footer-cont {
+.footer__contact__item {
   width: 231px;
   height: 21px;
 }
 
-.footer-cont:first-child {
+.footer__contact__item:first-child {
   margin: 9px 0px;
 }
 
-.footer-logo-link {
+.footer__logo {
   font-family: "Raleway", sans-serif;
   font-weight: 700;
   font-size: 26px;
@@ -313,11 +314,11 @@ body {
   text-decoration: none;
 }
 
-.footer-links {
+.footer__links {
   padding: 12px 0 0;
 }
 
-.footer-title {
+.footer__title {
   margin-bottom: 20px;
   color: #FFF;
   font-size: 14px;
@@ -327,12 +328,12 @@ body {
   text-transform: uppercase;
 }
 
-.footer-list-links {
+.footer__list__links {
   display: flex;
   justify-content: space-between;
 }
 
-.footer-list-item {
+.footer__links__item {
   width: 44px;
   height: 44px;
   background-color: rgba(255, 255, 255, 0.1);
@@ -342,28 +343,28 @@ body {
   justify-content: center;
 }
 
-.footer-list-item:nth-child(-n+3) {
+.footer__links__item:nth-child(-n+3) {
   margin-right: 10px;
 }
 
-.link-footer-icon {
+.footer__link__icon {
   width: 20px;
   height: 20px;
 }
 
-.footer-list-item:hover,
-.footer-list-item:focus {
+.footer__links__item:hover,
+.footer__links__item:focus {
   background-color: #2196F3;
   transition: 0.3s ease-in;
 }
 
-.footer-svg {
+.footer__svg {
   width: 20px;
   height: 20px;
   fill: #FFFFFF;
 }
 
-.footer-label {
+.footer__label {
   color: #FFF;
   font-size: 14px;
   font-weight: 700;
@@ -371,7 +372,7 @@ body {
   text-transform: uppercase;
 }
 
-.footer-email {
+.footer__email {
   width: 358px;
   height: 50px;
   border-radius: 4px;
@@ -383,7 +384,7 @@ body {
   margin-top: 20px;
 }
 
-.subscribe-bth {
+.subscribe__bth {
   width: 200px;
   height: 50px;
   border-radius: 4px;
@@ -414,18 +415,18 @@ body {
     -moz-box-shadow: 1px 3px 18px 19px rgba(0, 0, 0, 0.75);
   }
 }
-.footer-form {
+.footer__form {
   display: flex;
   align-items: flex-end;
 }
 
-.subscribe-svg {
+.subscribe__svg {
   margin-left: 10px;
   width: 24px;
   height: 24px;
 }
 
-.subscribe-list {
+.subscribe__list {
   display: flex;
 }
 
