--- a/SASS/components/_clients.scss
+++ b/SASS/components/_clients.scss
@@ -2,7 +2,7 @@
     padding: 94px 0;
 }
 
-.clients-title {
+.clients__title {
     color: #212121;
     text-align: center;
     font-size: 36px;
@@ -12,12 +12,12 @@
     margin-bottom: 50px;
 }
 
-.clients-list {
+.clients__list {
     display: flex;
     justify-content: space-between;
 }
 
-.clients-list-item {
+.clients__item {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -27,18 +27,18 @@
     border: 1px solid #AFB1B8;
 }
 
-.clients-icon {
+.clients__icon {
     fill: #AFB1B8;
     width: 106px;
     height: 60px;
 }
 
-.clients-list-item:hover .clients-icon {
+.clients__item:hover .clients__icon {
     fill: #2196F3;
     transition: fill 0.3s ease-in;
 }
 
-.clients-list-item:hover {
+.clients__item:hover {
     border-color: #2196F3;
     transition: border-color 0.3s ease-in;
     box-shadow: 0px 0px 23px 2px rgba(0, 0, 0, 0.56);
