--- a/SASS/components/_electricity.scss
+++ b/SASS/components/_electricity.scss
@@ -2,7 +2,7 @@
     margin: 94px auto;
 }
 
-.electricity-parag {
+.electricity__parag {
     text-align: center;
     margin: 0px 0px 50px;
     font-weight: 700;
@@ -11,26 +11,26 @@
 
 }
 
-.electricity-list {
+.electricity__list {
     display: flex;
     margin: 0 auto;
 }
 
-.thumb {
+.electricity__thumb {
     width: 370px;
     height: 294px;
     position: relative;
 }
 
-.electricity-img {
+.electricity__img {
     object-position: 100%;
 }
 
-.electricity-list-item:nth-child(-n+2) {
+.electricity__item:nth-child(-n+2) {
     margin-right: 30px;
 }
 
-.label {
+.electricity__label {
     position: absolute;
     width: 370px;
     height: 70px;
@@ -46,10 +46,6 @@
     text-transform: uppercase;
     animation: labelshadow 1s ease-in 500ms infinite alternate;
 }
-
-/* .label:hover{
-    
-} */
 
 @keyframes labelshadow {
     0% {
