--- a/SASS/components/_features.scss
+++ b/SASS/components/_features.scss
@@ -3,14 +3,14 @@
     margin: 0 auto;
 }
 
-.features-list {
+.features__list {
     list-style: none;
     display: flex;
     justify-content: center;
     margin: 94px 0px 0px 0px;
 }
 
-.features-subtitle {
+.features__subtitle {
     font-family: 'Roboto';
     font-weight: 700;
     font-size: 14px;
@@ -18,7 +18,7 @@
     letter-spacing: 0.03em;
 }
 
-.features-paragraf {
+.features__paragraf {
     font-family: 'Roboto';
     font-weight: 400;
     font-size: 14px;
@@ -26,4 +26,21 @@
     letter-spacing: 0.03em;
     color: #757575;
     margin: 0px 30px 0px 0px;
+}
+
+.features__item:nth-child(-n+3) {
+    margin: 0 30px 0 0;
+}
+
+.features__cart {
+    width: 270px;
+    height: 120px;
+    background-color: #F5F4FA;
+    padding: 25px 0;
+    margin-bottom: 30px;
+}
+
+.features__icon {
+    display: block;
+    margin: 0 auto;
 }
