--- a/SASS/components/_hero.scss
+++ b/SASS/components/_hero.scss
@@ -3,11 +3,11 @@
     padding: 200px 0;
     background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../Image/Img.jpg");
     background-position: center;
-    background-repeat: no-repeat;
+    background-repeat: no-repeat; 
     background-size: cover;
 }
 
-.hero-title {
+.hero__title {
     font-weight: 900;
     font-size: 44px;
     line-height: 1.36;
@@ -18,16 +18,14 @@
     margin-bottom: 30px;
 }
 
-.hero-btn {
+.hero__btn {
     margin: 0 auto;
     display: block;
     width: 216px;
     height: 50px;
     background: #2196F3;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-    /*тінь за кнопкою*/
     border-radius: 4px;
-    /*рамка*/
     font-weight: 700;
     font-size: 16px;
     line-height: 1.88;
@@ -64,7 +62,7 @@
     z-index: 99;
 }
 
-.modal{
+.hero__modal{
     padding: 40px;
     width: 528px;
     height: 623px;
@@ -83,13 +81,13 @@
     visibility: hidden;
 }
 
-.modal-list {
+.hero__modal__list {
     display: flex;
     flex-direction: column;
     gap: 10px;
 }
 
-.modal-label {
+.hero__modal__label {
     display: flex;
     flex-direction: column;
     color: #757575;
@@ -99,7 +97,7 @@
     position: relative;
 }
 
-.modal-input {
+.hero__modal__input {
     margin-bottom: 10px;
     width: 448px;
     height: 40px;
@@ -112,23 +110,23 @@
 }
 
 
-.modal-input:focus+.modal-svg {
+.hero__modal__input:focus+.hero__modal__svg {
     fill: #2196F3;
     transition: 0.3s ease;
 }
 
-.modal-input:hover+.modal-svg {
+.hero__modal__input:hover+.hero__modal__svg {
     fill: #2196F3;
     transition: 0.3s ease;
 }
 
-.modal-input:focus,
-.modal-input:hover {
+.hero__modal__input:focus,
+.hero__modal__input:hover {
     border-color: #2196F3;
     transition: 0.3s ease;
 }
 
-.modal-bth-close {
+.hero__bth__close {
     width: 30px;
     height: 30px;
     border-radius: 50%;
@@ -141,14 +139,14 @@
     padding: 5px;
 }
 
-.close-svg {
+.hero__close__svg {
     width: 18px;
     height: 18px;
     padding: 4px;
 }
 
-.close-svg:hover,
-.close-svg:focus {
+.hero__close__svg:hover,
+.hero__close__svg:focus {
     fill: #2196F3;
     transition: 0.3s ease;
 }
@@ -157,7 +155,7 @@
     display: block !important;
 }
 
-.modal-textarea {
+.hero__modal__textarea {
     width: 448px;
     height: 120px;
     border-radius: 4px;
@@ -167,7 +165,7 @@
     margin-top: 4px
 }
 
-.modal-text {
+.hero__modal__text {
     margin: 20px 6px 30px 6px;
     color: #757575;
     font-size: 14px;
@@ -176,20 +174,20 @@
     letter-spacing: 0.42px;
 }
 
-.modal-checkbox {
+.hero__modal__checkbox {
     margin-right: 7px;
     width: 16px;
     height: 15px;
 }
 
-.modal-textarea::placeholder {
+.hero__modal__textarea::placeholder {
     color: rgba(117, 117, 117, 0.50);
     font-size: 12px;
     font-weight: 400;
     letter-spacing: 0.12px;
 }
 
-.modal-title {
+.hero__modal__title {
     color: #212121;
     text-align: center;
     font-size: 20px;
@@ -198,7 +196,7 @@
     margin-bottom: 12px;
 }
 
-.modal-bth-submit {
+.hero__modal__submit {
     width: 200px;
     height: 50px;
     border-radius: 4px;
@@ -215,7 +213,7 @@
     cursor: pointer;
 }
 
-.modal-svg {
+.hero__modal__svg {
     width: 18px;
     height: 18px;
     position: absolute;
@@ -223,7 +221,7 @@
     left: 12px;
 }
 
-.modal-link {
+.hero__modal__link {
     color: #2196F3;
     font-size: 14px;
     font-style: normal;
@@ -231,14 +229,4 @@
     line-height: 24px;
     letter-spacing: 0.42px;
     text-decoration-line: underline;
-}
-
-.backdrop {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.3);
-    z-index: 99;
 }
