--- a/SASS/components/_portfolio-bth.scss
+++ b/SASS/components/_portfolio-bth.scss
@@ -1,15 +1,15 @@
-.main-section-bth {
+.main__section__bth {
     margin: 94px 0px 50px;
 }
 
-.main-list-bth {
+.main__list__bth {
     list-style: none;
     display: flex;
     justify-content: center;
 }
 
 
-.main-button-item {
+.main__button__item {
     padding: 0 25px;
     height: 38px;
     border-radius: 4px;
@@ -24,11 +24,12 @@
     line-height: 26px;
     letter-spacing: 0.48px;
     margin: 0px 8px 0px 0px;
+    cursor: pointer;
 }
 
 
-.main-button-item:hover,
-.main-button-item:focus {
+.main__button__item:hover,
+.main__button__item:focus {
     background-color: #2196F3;
     color: #FFFFFF;
     box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
